--- a/laboratorio006/crudapp/templates/crudapp/crear_item.html
+++ b/laboratorio006/crudapp/templates/crudapp/crear_item.html
@@ -1,10 +1,10 @@
 \<!-- templates/crudapp/crear_item.html -->
 {% extends 'crudapp/base.html' %}
 
-{% block title %}Crear Item{% endblock %}
+{% block title %}Crear producto{% endblock %}
 
 {% block content %}
-<h1>Crear nuevo item</h1>
+<h1>Crear nuevo producto</h1>
 <form method="POST" class="mt-4">
     {% csrf_token %}
     <div class="mb-3">
