--- a/laboratorio006/crudapp/templates/crudapp/editar_item.html
+++ b/laboratorio006/crudapp/templates/crudapp/editar_item.html
@@ -1,10 +1,10 @@
 <!-- templates/crudapp/editar_item.html -->
 {% extends 'crudapp/base.html' %}
 
-{% block title %}Editar Item{% endblock %}
+{% block title %}Editar Producto{% endblock %}
 
 {% block content %}
-<h1>Editar item</h1>
+<h1>Editar producto</h1>
 <form method="POST" class="mt-4">
     {% csrf_token %}
     <div class="mb-3">
